// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BackTop/demo/basic.md correctly 1`] = `
<div
  style="position:relative;padding:8px 12px"
>
  <div
    class="arco-backtop"
    style="position:absolute"
  />
  <div
    class="arco-typography"
  >
    The button will appear in the bottom corner of the scrolling area
  </div>
  <div
    id="custom_backtop0"
    style="height:300px;overflow:auto"
  >
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`renders BackTop/demo/custom_button.md correctly 1`] = `
<div
  style="position:relative;padding:8px 12px"
>
  <div
    class="arco-backtop"
    style="position:absolute"
  />
  <div
    id="custom_backtop"
    style="height:300px;overflow:auto"
  >
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`renders BackTop/demo/easing.md correctly 1`] = `
<div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-center"
    style="margin:12px"
  >
    <div
      class="arco-space-item"
      style="margin-right:10px"
    >
      <span
        class="arco-typography"
      >
        Easing
      </span>
    </div>
    <div
      class="arco-space-item"
      style="margin-right:10px"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="arco-select arco-select-single arco-select-size-default"
        role="combobox"
        style="width:200px"
        tabindex="0"
      >
        <div
          class="arco-select-view"
          title="linear"
        >
          <span
            class="arco-select-view-selector"
          >
            <input
              aria-hidden="true"
              autocomplete="off"
              class="arco-select-view-input arco-select-hidden"
              style="width:100%;pointer-events:none"
              tabindex="-1"
              value=""
            />
            <span
              class="arco-select-view-value"
            >
              linear
            </span>
          </span>
          <div
            aria-hidden="true"
            class="arco-select-suffix"
          >
            <div
              class="arco-select-arrow-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-down"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M39.6 17.443 24.043 33 8.487 17.443"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
      style="margin-right:10px"
    >
      <span
        class="arco-typography"
      >
        Time
      </span>
    </div>
    <div
      class="arco-space-item"
    >
      <input
        class="arco-input arco-input-size-default"
        placeholder="Please enter the easing time"
        style="width:200px"
        value="200"
      />
    </div>
  </div>
  <div
    style="position:relative"
  >
    <div
      class="arco-backtop"
      style="position:absolute;right:60px;bottom:60px"
    />
    <div
      id="custom_backtop2"
      style="height:300px;overflow:auto;padding:8px 12px"
    >
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
    </div>
  </div>
</div>
`;
